2004-10-26  Keith Packard  <keithp@keithp.com>

	* Makefile.am:
	* twin_button.c: (_twin_button_paint),
	(_twin_button_set_label_offset), (_twin_button_dispatch),
	(_twin_button_init), (twin_button_create):
	Add button widget
	
	* twin.h:
	* twinint.h:
	Grab button down inside client area.
	Add button widget
	
	* twin_hello.c: (twin_hello_start):
	* twin_hello.h:
	Test button widget
	
	* twin_label.c: (_twin_label_paint), (_twin_label_init),
	(twin_label_create):
	Permit subclassing; add offset to make text shift in button
	
	* twin_widget.c: (_twin_widget_contains):
	Add _twin_widget_contains to test inclusion
	
	* twin_window.c: (twin_window_create), (twin_window_dispatch):
	Grab button down inside client area 
	
	* xtwin.c: (main):
	Make hello window larger

2004-10-25  Keith Packard  <keithp@keithp.com>

	* Makefile.am:
	* twin.h:
	* twin_box.c: (_twin_box_init), (_twin_box_query_geometry),
	(_twin_box_configure), (_twin_box_xy_to_widget),
	(_twin_box_dispatch), (twin_box_create):
	* twin_label.c: (_twin_label_query_geometry), (_twin_label_paint),
	(_twin_label_dispatch), (twin_label_set), (_twin_label_init),
	(twin_label_create):
	* twin_toplevel.c: (_twin_toplevel_dispatch),
	(_twin_toplevel_event), (_twin_toplevel_draw),
	(_twin_toplevel_destroy), (_twin_toplevel_init),
	(twin_toplevel_create), (_twin_toplevel_paint),
	(_twin_toplevel_queue_paint), (_twin_toplevel_layout),
	(_twin_toplevel_queue_layout), (twin_toplevel_show):
	* twin_widget.c: (_twin_widget_paint), (_twin_widget_dispatch),
	(_twin_widget_init), (_twin_widget_queue_paint),
	(_twin_widget_queue_layout), (twin_widget_create),
	(twin_widget_set):
	* twinint.h:
	Add initial widget implementation.
	
	* twin_glyphs.c:
	Fix numbers to have the same width.

	* twin_pixmap.c: (twin_pixmap_set_clip):
	Add new relative-origin clip setting function
	
	* twin_screen.c: (twin_screen_set_active), (twin_screen_dispatch):
	* twin_window.c: (twin_window_create), (twin_window_style_size),