@@ -35,7 +35,6 @@ _twin_button_paint (twin_button_t *button)
     twin_fixed_t	wf = twin_int_to_fixed (w);
     twin_fixed_t	hf = twin_int_to_fixed (h);
     twin_fixed_t	bf = _twin_button_bw (button);
-    twin_fixed_t	bh = bf / 2;
     twin_argb32_t	top_color, bot_color;
     twin_pixmap_t	*pixmap = button->label.widget.window->pixmap;
     
@@ -51,15 +50,23 @@ _twin_button_paint (twin_button_t *button)
 	    top_color = 0x80808080;
 	    bot_color = 0x80000000;
 	}
-	twin_path_move (path, bh, hf-bh);
-	twin_path_draw (path, bh, bh);
-	twin_path_draw (path, wf-bh, bh);
-	twin_paint_stroke (pixmap, top_color, path, bf);
+	twin_path_move (path, 0, 0);
+	twin_path_draw (path, wf, 0);
+	twin_path_draw (path, wf-bf, bf);
+	twin_path_draw (path, bf, bf);
+	twin_path_draw (path, bf, hf-bf);
+	twin_path_draw (path, 0, hf);
+	twin_path_close (path);
+	twin_paint_path (pixmap, top_color, path);
 	twin_path_empty (path);
-	twin_path_move (path, bh, hf-bh);
-	twin_path_draw (path, wf-bh, hf-bh);
-	twin_path_draw (path, wf-bh, bh);
-	twin_paint_stroke (pixmap, bot_color, path, bf);
+	twin_path_move (path, bf, hf-bf);
+	twin_path_draw (path, wf-bf, hf-bf);
+	twin_path_draw (path, wf-bf, bf);
+	twin_path_draw (path, wf, 0);
+	twin_path_draw (path, wf, hf);
+	twin_path_draw (path, 0, hf);
+	twin_path_close (path);
+	twin_paint_path (pixmap, bot_color, path);
 	twin_path_destroy (path);
     }
 }
